adding full list of selected features table

--- a/src/student_success_tool/reporting/template/styles/model_card.css
+++ b/src/student_success_tool/reporting/template/styles/model_card.css
@@ -63,6 +63,11 @@ tr {
     break-after: auto;
 }
 
+/* Repeat table header on every printed page */
+thead {
+    display: table-header-group;
+}
+
 /* ================================
    List Styling
 ================================ */
